igilb.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prod-ingress-3
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx-2-internal
          servicePort: 80
