ingress01.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prod-ingress-2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx-nodeport
          servicePort: 80
